# recursive-stwo

./: .gitignore  Cargo.toml  README.md
components/answer/: Cargo.toml
components/answer/src/: lib.rs
components/composition/: Cargo.toml
components/composition/src/: data_structures.rs  lib.rs  plonk.rs  poseidon.rs
components/data_structures/: Cargo.toml
components/data_structures/src/: lib.rs
components/fiat_shamir/: Cargo.toml
components/fiat_shamir/src/: data_structures.rs  lib.rs
components/folding/: Cargo.toml
components/folding/src/: lib.rs
components/hints/: Cargo.toml
components/hints/src/: answer.rs  decommit.rs  fiat_shamir.rs  folding.rs  lib.rs
components/last/answer/: Cargo.toml
components/last/answer/src/: lib.rs
components/last/answer/src/data_structures/: merkle_proofs.rs  mod.rs
components/last/composition/: Cargo.toml
components/last/composition/src/: lib.rs
components/last/data_structures/: Cargo.toml
components/last/data_structures/src/: lib.rs
components/last/fiat_shamir/: Cargo.toml
components/last/fiat_shamir/src/: lib.rs
components/last/folding/: Cargo.toml
components/last/folding/src/: lib.rs
components/last/folding/src/data_structures/: merkle_proofs.rs  mod.rs
components/prepare/: Cargo.toml
components/prepare/src/: data_structures.rs  lib.rs
components/recursive/answer/: Cargo.toml
components/recursive/answer/src/: data_structures.rs  lib.rs
components/recursive/composition/: Cargo.toml
components/recursive/composition/src/: data_structures.rs  lib.rs  plonk.rs  poseidon.rs
components/recursive/data_structures/: Cargo.toml
components/recursive/data_structures/src/: lib.rs
components/recursive/fiat_shamir/: Cargo.toml
components/recursive/fiat_shamir/src/: lib.rs
components/recursive/folding/: Cargo.toml
components/recursive/folding/src/: lib.rs
components/test_data/: input.json
constraint_system/: Cargo.toml
constraint_system/src/: lib.rs  plonk_with_poseidon.rs  plonk_without_poseidon.rs  var.rs
dsl/constraint_system/: Cargo.toml
dsl/constraint_system/src/: accelerators.rs  dvar.rs  lib.rs  plonk_with_poseidon.rs  plonk_without_poseidon.rs
examples/last-layer/: Cargo.toml
examples/last-layer/src/: main.rs
examples/multi-proofs/: Cargo.toml
examples/multi-proofs/src/: main.rs
examples/single-proof/: Cargo.toml
examples/single-proof/src/: main.rs
integration/: Cargo.toml
integration/src/: main.rs
primitives/bits/: Cargo.toml
primitives/bits/src/: lib.rs
primitives/channel/: Cargo.toml
primitives/channel/src/: lib.rs
primitives/circle/: Cargo.toml
primitives/circle/src/: lib.rs
primitives/fields/: Cargo.toml
primitives/fields/src/: cm31.rs  lib.rs  m31.rs  qm31.rs
primitives/line/: Cargo.toml
primitives/line/src/: lib.rs
primitives/merkle/: Cargo.toml
primitives/merkle/src/: lib.rs
primitives/poseidon31/: Cargo.toml
primitives/poseidon31/src/: emulated.rs  implementation.rs  lib.rs  parameters.rs
primitives/query/: Cargo.toml
primitives/query/src/: lib.rs
