[workspace]
resolver = "2"
members = [
    "dsl/constraint_system", "primitives/poseidon31", "primitives/fields", "primitives/channel",
    "components/hints", "components/fiat_shamir", "components/composition", "components/data_structures",
    "primitives/bits", "primitives/circle"
]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo-circle-poseidon-plonk/", branch = "circle-plonk-poseidon" }
num-traits = "0.2.19"
poseidon2-m31 = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/poseidon2-m31.git" }
rand = "0.8.5"
rand_chacha = "0.3.1"
ark-std = "0.4.0"
circle-plonk-lib = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/circle-plonk" }
bincode = "1.3.3"
itertools = "0.13.0"
indexmap = "2.7.0"
serde_json = "1.0.133"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true