[workspace]
resolver = "2"
members = [
    "dsl/constraint_system", "primitives/poseidon31", "primitives/fields", "primitives/channel", "primitives/query",
    "components/hints", "components/recursive/fiat_shamir", "components/recursive/composition", "components/recursive/data_structures",
    "components/recursive/answer", "components/recursive/folding",
    "components/last/fiat_shamir",
    "primitives/bits", "primitives/circle", "primitives/merkle",
    "examples/single-proof", "examples/multi-proofs",
]

[workspace.dependencies]
serde = { version = "1.0.217", features = ["derive"] }
stwo-prover = { git = "https://github.com/Bitcoin-Wildlife-Sanctuary/stwo-circle-poseidon-plonk/", branch = "cp-poseidon-flattened", features = ["parallel"] }
num-traits = "0.2.19"
rand = "0.8.5"
bincode = "1.3.3"
itertools = "0.13.0"
indexmap = "2.7.0"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true