[package]
name = "circle-plonk-dsl-integration"
version = "0.1.0"
edition = "2021"

[dependencies]
circle-plonk-dsl-composition = { path = "../components/composition" }
circle-plonk-dsl-hints = { path = "../components/hints" }
stwo-prover.workspace = true
bincode.workspace = true
circle-plonk-dsl-constraint-system = { path = "../dsl/constraint_system" }
circle-plonk-dsl-data-structures = { path = "../components/data_structures" }
circle-plonk-dsl-fiat-shamir = { path = "../components/fiat_shamir" }
num-traits.workspace = true