[package]
name = "circle-plonk-dsl-composition"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo-prover.workspace = true
circle-plonk-dsl-fields = { path = "../../primitives/fields" }
circle-plonk-dsl-data-structures = { path = "../data_structures" }
num-traits = "0.2.19"
circle-plonk-dsl-constraint-system = { path = "../../dsl/constraint_system" }
circle-plonk-dsl-fiat-shamir = { path = "../fiat_shamir" }
circle-plonk-dsl-hints = { path = "../hints" }
circle-plonk-dsl-circle = { path = "../../primitives/circle" }
bincode.workspace = true
itertools.workspace = true