[package]
name = "circle-plonk-dsl-prepare"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo-prover.workspace = true
circle-plonk-dsl-circle = { path = "../../primitives/circle" }
circle-plonk-dsl-hints = { path = "../hints" }
circle-plonk-dsl-fields = { path = "../../primitives/fields" }
circle-plonk-dsl-data-structures = { path = "../data_structures" }
circle-plonk-dsl-constraint-system = { path = "../../dsl/constraint_system" }
bincode.workspace = true
num-traits.workspace = true
itertools.workspace = true