[package]
name = "circle-plonk-dsl-example-last-layer"
version = "0.1.0"
edition = "2021"

[dependencies]
circle-plonk-dsl-hints = { path = "../../components/hints" }
circle-plonk-dsl-constraint-system = { path = "../../dsl/constraint_system" }
circle-plonk-dsl-last-data-structures = { path = "../../components/last/data_structures" }
circle-plonk-dsl-last-fiat-shamir = { path = "../../components/last/fiat_shamir" }
circle-plonk-dsl-last-answer = { path = "../../components/last/answer" }
circle-plonk-dsl-last-folding = { path = "../../components/last/folding" }
stwo-prover.workspace = true
bincode.workspace = true
num-traits.workspace = true