[package]
name = "circle-plonk-dsl-circle"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
circle-plonk-dsl-constraint-system = { path = "../../constraint_system" }
circle-plonk-dsl-fields = { path = "../fields" }
circle-plonk-dsl-channel = { path = "../channel" }
circle-plonk-dsl-bits = { path = "../bits" }
num-traits.workspace = true
itertools.workspace = true