[package]
name = "circle-plonk-dsl-line"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
circle-plonk-dsl-constraint-system = { path = "../../constraint_system" }
circle-plonk-dsl-fields = { path = "../fields" }
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true