[package]
name = "circle-plonk-dsl-query"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo-prover.workspace = true
circle-plonk-dsl-constraint-system = { path = "../../constraint_system" }
circle-plonk-dsl-fields = { path = "../fields" }
circle-plonk-dsl-circle = { path = "../circle" }
circle-plonk-dsl-bits = { path = "../bits" }
num-traits.workspace = true
itertools.workspace = true