[package]
name = "circle-plonk-dsl-last-composition"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
stwo-constraint-framework.workspace = true
circle-plonk-dsl-hints = { path = "../../hints" }
circle-plonk-dsl-fields = { path = "../../../primitives/fields" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
circle-plonk-dsl-last-fiat-shamir = { path = "../fiat_shamir" }
circle-plonk-dsl-last-data-structures = { path = "../data_structures" }
circle-plonk-dsl-data-structures = { path = "../../recursive/data_structures" }
circle-plonk-dsl-circle = { path = "../../../primitives/circle" }
circle-plonk-dsl-composition = { path = "../../recursive/composition" }
num-traits.workspace = true
bincode.workspace = true
itertools.workspace = true