[package]
name = "circle-plonk-dsl-last-data-structures"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo-prover.workspace = true
circle-plonk-dsl-fields = { path = "../../../primitives/fields" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
circle-plonk-dsl-data-structures = { path = "../../recursive/data_structures" }
circle-plonk-dsl-line = { path = "../../../primitives/line" }