[package]
name = "circle-plonk-dsl-last-folding"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo-prover.workspace = true
circle-plonk-dsl-hints = { path = "../../hints" }
circle-plonk-dsl-fields = { path = "../../../primitives/fields" }
circle-plonk-dsl-constraint-system = { path = "../../../dsl/constraint_system" }
itertools.workspace = true
num-traits.workspace = true