[package]
name = "circle-plonk-dsl-data-structures"
version = "0.1.0"
edition = "2021"

[dependencies]
stwo.workspace = true
stwo-examples.workspace = true
circle-plonk-dsl-fields = { path = "../../../primitives/fields" }
circle-plonk-dsl-constraint-system = { path = "../../../constraint_system" }
circle-plonk-dsl-channel = { path = "../../../primitives/channel" }
circle-plonk-dsl-hints = { path = "../../hints" }
circle-plonk-dsl-bits = { path = "../../../primitives/bits" }
circle-plonk-dsl-line = { path = "../../../primitives/line" }
circle-plonk-dsl-merkle = { path = "../../../primitives/merkle" }
num-traits.workspace = true

[dev-dependencies]
bincode.workspace = true